Criado api de deleção e APi de adicionar tasks
