# routes/projects-routes.js
@@ -3,11 +3,11 @@ const projectsService = require('../services/projects-service');
 const router = express.Router();
 
     
-router.post('/projects', [projectsService.createProject]);
-router.get('/projects',[projectsService.getProjects]);
-//router.put('/projects/:id', ProjectsCtrl.changeProjectById);
-//router.delete('/projects/:id', ProjectsCtrl.deleteProjectById);
-//router.post('/projects/:id/tasks', ProjectsCtrl.addTasksToProjectById);
+router.post('/projects', projectsService.createProject);
+router.get('/projects',  projectsService.getProjects);
+router.put('/projects/:id', projectsService.changeProjectTitle);
+router.delete('/projects/:id', projectsService.deleteProjectById);
+router.post('/projects/:id/tasks', projectsService.addTasksToProjectById);
 
 
 
